# rust

./: .gitignore  Cargo.toml  look
ErrorHandling/: Cargo.toml
ErrorHandling/src/: main.rs  propagating.rs
collections/src/: holdingEnums.rs  iterate.rs  main.rs
data-flow/: Cargo.toml
data-flow/src/: main.rs
generics/src/: main.rs
guessing-game/src/: main.rs
hashmap/src/: main.rs
ownership/src/: main.rs
playground/: Cargo.toml
playground/collection-module/: Cargo.toml
playground/collection-module/src/: main.rs
playground/src/: main.rs
playground/sum/: main.rs
slice/src/: main.rs
structs/src/: main.rs  tuplas.rs
tipos-de-dados/: Cargo.toml
tipos-de-dados/enums/: enumsv1.rs  enumsv2.rs  match.rs  matchState.rs  option.rs
tipos-de-dados/src/: tuplas.rs
traits/: Cargo.toml
traits/src/: conditionalTraits.rs  main.rs  traitingParameters.rs  traitingReturns.rs
variables/src/: main.rs
